--- a/personal.html
+++ b/personal.html
@@ -20,18 +20,18 @@
 
 			</ul>
 		</nav>
-		<h2>Family</h2>
+		<h1>Family</h1>
 	</header>
 
 
 
 	<main>
 		<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.</p>
-		<img src="images/wisconsin_dells.jpg" width="25" />
-		<img src="images/badlands.jpg" width="1000" />
-		<img src="images/falling.jpg" width="25" />
-		<img src="images/jewel_cave.JPG" width="1000" />
-		<img src="images/rushmore.jpg" width="25" alt="" />
+		<img src="images/wisconsin_dells.jpg" width="25" alt="Picture of children at Wisconsin Dells"/>
+		<img src="images/badlands.jpg" width="1000" alt="Picture of children at Badlands National Park"/>
+		<img src="images/falling.jpg" width="25" alt="Picture of boy hanging on to edge of a rock"/>
+		<img src="images/jewel_cave.jpg" width="1000" alt="Picture of children at Jewel Cave National Monument"/>
+		<img src="images/rushmore.jpg" width="25" alt="Picture of Mount Rushmore" />
 	</main>
 
 	<footer>
