--- a/personal.html
+++ b/personal.html
@@ -30,7 +30,7 @@
 		<img src="images/wisconsin_dells.jpg" width="25" alt="Picture of children at Wisconsin Dells"/>
 		<img src="images/badlands.jpg" width="1000" alt="Picture of children at Badlands National Park"/>
 		<img src="images/falling.jpg" width="25" alt="Picture of boy hanging on to edge of a rock"/>
-		<img src="images/jewel_cave.jpg" width="1000" alt="Picture of children at Jewel Cave National Monument"/>
+		<img src="images/jewel_cave.JPG" width="1000" alt="Picture of children at Jewel Cave National Monument"/>
 		<img src="images/rushmore.jpg" width="25" alt="Picture of Mount Rushmore" />
 	</main>
 
